# mirror-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  allblue-readme-snapshot.md  config.py  package-lock.json  pyproject.toml
data/: rejections.md
data/critiques/: conversation-log.json
data/defense-patterns/: patterns.json
data/reports/allblue-readme-snapshot/: 20260425_040815_allblue-readme-snapshot.history.json  20260425_040815_allblue-readme-snapshot.md
data/rules/auto-v0.1/: rule_critical_feedback_suppression.json  rule_feedback_misinterpretation.json  rule_scope_limitation_value_dilution.json  rule_solo_planning_blind_spot.json  (+1 more)
docs/: roadmap.md
docs/architecture/: historical-agent-plan.md
docs/compact_summary/: compact_summary_2026_04_23.md
docs/origin/: conversation-log.md
docs/plans/: implementation_plan_remaining.md  next_steps.md  phase5_implementation_plan.md  phase5a_socratic_agent.md  phase5b_contrarian_agent.md  phase5c_orchestrator.md  phase5d_planning_agent.md
eval/: ground_truth.json
memory/: MEMORY.md  memory_20260423.md  memory_20260425.md
src/mirror_agent/: __init__.py  analyzer.py  cli.py  config.py  contrarian.py  defender.py  extractor.py  generalizer.py  generator.py  llm.py  loader.py  matcher.py  models.py  orchestrator.py  pipeline.py  planner.py  reporter.py  scorer.py  socratic.py
tests/: test_contrarian.py  test_extractor.py  test_loader.py  test_orchestrator.py  test_planner.py  test_scorer.py  test_socratic.py
tests/fixtures/: allblue-readme-snapshot.md  inspection-agent-design.md  mirror-agent-idea.md
(+11 files in other folders)
